# hatch-vcs-ignore-bug

./: .gitignore  README.md  app.py  pyproject.toml
src/: something.py
static/: not-ignored-file.txt
