[project]
name = "Something"
description = "A test app for the vcs-ignore functionality."
authors = [
    { name="Micha B", email="git@micha-b.de" },
]
version = "0.0.1"
readme = "README.md"
requires-python=">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
packages = [
    "src",
    "static",
    "app.py"
]
